objects/CN_Download_By_Url_Info__c.object
<CustomObject>
    <description>Download By Url Info</description>
    <fields>
        <fullName>CN_Field_Name__c</fullName>
        <label>Field Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_File_Url__c</fullName>
        <label>File Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Linked_Entity_Id__c</fullName>
        <label>Linked Entity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Need_Download__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Download</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Object_Name__c</fullName>
        <label>Object Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Server_Url__c</fullName>
        <label>Server Url</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Suffix_Name__c</fullName>
        <label>Suffix Name</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Download By Url Info</label>
    <nameField>
        <label>Download Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Download By Url Infos</pluralLabel>
    <recordTypes>
        <fullName>CN_File_Record</fullName>
        <active>true</active>
        <label>CN_File_Record</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>